# qcom-ptool

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  gen_contents.py  gen_partition.py  msp.py  ptool.py  pyproject.toml  utils.py
.github/: CODEOWNERS
.github/workflows/: build.yml  stale-issues.yaml
degpt/src/: lib.rs  main.rs  mygpt.rs
qcom_ptool/: __init__.py  board.py  cli.py  gen_contents.py  gen_partition.py  msp.py  ptool.py  show.py  spec.py
qcom_ptool/loaders/: __init__.py  conf.py  yaml.py
qcom_ptool/schema/: __init__.py  board.schema.json  include.schema.json  partitions.schema.json
tests/integration/: check-checksums  check-include-multidisk  check-missing-files  check-partitions  checksums.sha256
tests/unit/: test_board.py  test_cli.py  test_cli_board.py  test_gen_partition.py  test_glymur_poc.py  test_loaders_conf.py  test_loaders_yaml.py  test_utils.py
tests/unit/data/: glymur-crd-nvme.conf  glymur-crd-nvme.yaml
