[project]
name = "qcom-ptool"
version = "1.0.0"
description = "Qualcomm partition tool - GPT partition table generator and mass storage programmer"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort (replaces standalone isort)
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long - existing code exceeds limits extensively
    "UP031", # %-format strings - pervasive in existing code, convert incrementally
    "UP034", # extraneous parentheses - minor style issue
    "SIM115", # use context manager for open() - would require restructuring legacy code
]

[tool.ruff.lint.isort]
known-first-party = ["gen_partition", "gen_contents", "ptool", "msp", "utils"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["msp", "ptool"]
# Legacy scripts - enable gradually
check_untyped_defs = false
